fixed project overflow a bit

--- a/source/assets/styles/updated_homepage_CSS.css
+++ b/source/assets/styles/updated_homepage_CSS.css
@@ -410,10 +410,15 @@ iframe {
     gap: 3vw;
     row-gap: 1vh;*/
     grid-area: projCardsCont;
+    margin-left: 4vw;
 }
 .project-cards-grid{
-    display:grid;
-    grid-template-columns: repeat(4, 20%);
+    display: flex;
+    /* display:grid;
+    grid-template-columns: repeat(4, 20%); */
+    overflow-x:auto;
+    gap: 3vw;
+    row-gap: 1vh;
     margin-top: 15px;
 }
 
